--- a/spring-cloud-huawei-swagger/pom.xml
+++ b/spring-cloud-huawei-swagger/pom.xml
@@ -31,10 +31,14 @@
   <dependencies>
     <dependency>
       <groupId>io.springfox</groupId>
-      <artifactId>springfox-boot-starter</artifactId>
+      <artifactId>springfox-swagger2</artifactId>
     </dependency>
     <dependency>
-      <groupId>io.swagger.core.v3</groupId>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger-ui</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.swagger</groupId>
       <artifactId>swagger-core</artifactId>
     </dependency>
     <dependency>
