--- a/integration-tests/cse-v1/gateway/pom.xml
+++ b/integration-tests/cse-v1/gateway/pom.xml
@@ -1,4 +1,7 @@
 <!--
+
+  Copyright (C) 2020-2022 Huawei Technologies Co., Ltd. All rights reserved.
+
   ~ Licensed to the Apache Software Foundation (ASF) under one or more
   ~ contributor license agreements.  See the NOTICE file distributed with
   ~ this work for additional information regarding copyright ownership.
